// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk eeCsLM"
  >
    text
    <span
      class="sc-hKDTPf cgNazc"
      position="top-right"
      variant="dot"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk eeCsLM"
  >
    text
    <span
      class="sc-hKDTPf hLJBsI"
      position="top-right"
      variant="normal"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
